// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wrapper > Wrap mermaid code block with custom tag 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "properties": {
            "className": [
              "mermaid",
            ],
          },
          "tagName": "pre",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "div",
      "type": "element",
    },
  ],
  "properties": {},
  "tagName": "body",
  "type": "element",
}
`;

exports[`wrapper > Wrap mermaid code block with p tag 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "properties": {
            "className": [
              "mermaid",
            ],
          },
          "tagName": "pre",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "properties": {},
  "tagName": "body",
  "type": "element",
}
`;

exports[`wrapper > Wrap multiple mermaid code block with p tag 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "properties": {
            "className": [
              "mermaid",
            ],
          },
          "tagName": "pre",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
    {
      "children": [
        {
          "children": [],
          "properties": {
            "className": [
              "mermaid",
            ],
          },
          "tagName": "pre",
          "type": "element",
        },
      ],
      "properties": {},
      "tagName": "p",
      "type": "element",
    },
  ],
  "properties": {},
  "tagName": "body",
  "type": "element",
}
`;

exports[`wrapper > Wrap pre with p tag 1`] = `
{
  "children": [],
  "properties": {
    "className": [
      "mermaid",
    ],
  },
  "tagName": "pre",
  "type": "element",
}
`;
